bootstrap/kubernetes/apps/media/sabnzbd/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: sabnzbd
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      run: sabnzbd
  template:
    metadata:
      labels:
        run: sabnzbd
      annotations: {}
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: "America/Argentina/Cordoba"
          image: lscr.io/linuxserver/sabnzbd:latest
          name: sabnzbd
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1500m
              memory: 1Gi
          ports:
            - containerPort: 8080
              name: webui
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: downloads
          persistentVolumeClaim:
            claimName: sabnzbd-down
