bootstrap/kubernetes/apps/media/sabnzbd/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: webui
  selector:
    run: sabnzbd
  loadBalancerIP: 10.42.20.71
